@@ -1,5 +1,6 @@
 Work in progress:
 
+* Issue #45 - Stmt.close() should not close metadata
 * Issue #49 - PreparedStatement.getUpdateCount should return -1 if the current result is a ResultSet or no more results exist
 * Issue #48 - PreparedStatement.getResultSet should return null if current result is an update
 * Issue #67 - Bad ResultSet returned from DatabaseMetaData.getColumns(), if a given table doesn't exist
